CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(theBallEngine)

STRING(TOLOWER ${CMAKE_SOURCE_DIR}/${CMAKE_BUILD_TYPE} OUTPUT_PATH)

SET(LIBRARY_OUTPUT_PATH ${OUTPUT_PATH})

SET(CMAKE_BUILD_TYPE "Debug" CACHE STRING "" FORCE)

SET(TBENGINE_BOOST_INCLUDE "" CACHE PATH "TBENGINE BOOST INCLUDE")

INCLUDE_DIRECTORIES(${TBENGINE_BOOST_INCLUDE})

FILE(GLOB_RECURSE SOURCES_FILES sources/*)

ADD_LIBRARY(tbengine STATIC ${SOURCES_FILES})
